--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,26 +22,26 @@ services:
       - 'traefik.http.routers.pgadmin.entryPoints=webSecure'
       - 'traefik.http.routers.pgadmin.tls.certResolver=myResolver'
 
-  migrations:
+  backend_migrations:
     depends_on:
       - pg
-    image: xalvaine/coffilation-backend:${VERSION}
+    image: xalvaine/coffilation-backend:${BACKEND_VERSION}
     env_file:
       - .env
     command: yarn orm:migration:run
     working_dir: /home/app
     profiles:
-      - migrations
+      - backend_migrations
 
-  nest:
+  backend:
     restart: always
     depends_on:
       - pg
-    image: xalvaine/coffilation-backend:${VERSION}
+    image: xalvaine/coffilation-backend:${BACKEND_VERSION}
     env_file:
       - .env
     environment:
-      VERSION: ${VERSION}
+      VERSION: ${BACKEND_VERSION}
     volumes:
       - nest_node_modules:/home/app/node_modules
     working_dir: /home/app
@@ -50,7 +50,22 @@ services:
     command: yarn start:prod
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.nest.rule=Host(`test.api.coffilation.ru`)'
+      - 'traefik.http.routers.nest.rule="Host(`test.api.coffilation.ru`) || Host(`backend.test.coffilation.ru`)"'
+      - 'traefik.http.routers.nest.entryPoints=webSecure'
+      - 'traefik.http.routers.nest.tls.certResolver=myResolver'
+
+  search:
+    restart: always
+    image: xalvaine/coffilation-search:${SEARCH_VERSION}
+    environment:
+      VERSION: ${SEARCH_VERSION}
+    working_dir: /home/app
+    expose:
+      - 8000
+    command: yarn start:prod
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.nest.rule=Host(`search.test.coffilation.ru`)'
       - 'traefik.http.routers.nest.entryPoints=webSecure'
       - 'traefik.http.routers.nest.tls.certResolver=myResolver'
 
