--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       - .env
     environment:
       VERSION: ${BACKEND_VERSION}
+      PLACE_LOOKUP_ENDPOINT: http://search:8000/lookup
     working_dir: /home/app
     expose:
       - 8000
