--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - pgadmin:/var/lib/pgadmin
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.pgadmin.rule=Host(`pgadmin.test.api.coffilation.ru`)'
+      - 'traefik.http.routers.pgadmin.rule=Host(`pgadmin.test.coffilation.ru`)'
       - 'traefik.http.routers.pgadmin.entryPoints=webSecure'
       - 'traefik.http.routers.pgadmin.tls.certResolver=myResolver'
 
@@ -49,25 +49,9 @@ services:
     command: yarn start:prod
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.backend.rule=Host(`test.api.coffilation.ru`, `backend.test.coffilation.ru`)'
+      - 'traefik.http.routers.backend.rule=Host(`backend.test.coffilation.ru`)'
       - 'traefik.http.routers.backend.entryPoints=webSecure'
       - 'traefik.http.routers.backend.tls.certResolver=myResolver'
-
-  search:
-    restart: always
-    image: xalvaine/coffilation-search:${SEARCH_VERSION}
-    environment:
-      NEST_ADDRESS: 0.0.0.0
-      VERSION: ${SEARCH_VERSION}
-    working_dir: /home/app
-    expose:
-      - 8000
-    command: yarn start:prod
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.search.rule=Host(`search.test.coffilation.ru`)'
-      - 'traefik.http.routers.search.entryPoints=webSecure'
-      - 'traefik.http.routers.search.tls.certResolver=myResolver'
 
   traefik:
     image: traefik:v2.8
