[fix] Fix path in workflows

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,6 +19,6 @@ jobs:
           envs: VERSION
           script: |
             set -e
-            cd /home/github/coffilation-deploy
+            cd ./deploy
             git fetch origin main
             git reset --hard origin/main
